--- a/app/src/main/res/layout/drivers_standings_recycler_view.xml
+++ b/app/src/main/res/layout/drivers_standings_recycler_view.xml
@@ -90,8 +90,8 @@
         android:layout_width="160dp"
         android:layout_height="93dp"
         android:layout_marginTop="10dp"
-        android:fontFamily="@font/formula1black"
-        android:text="16"
+        android:fontFamily="@font/formula1italic"
+        android:text="33"
         android:textAlignment="textEnd"
         android:textColor="#2711233C"
         android:textSize="80sp"
