--- a/app/src/main/res/layout/fragment_race_info.xml
+++ b/app/src/main/res/layout/fragment_race_info.xml
@@ -4,19 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/gradient_background">
+    tools:context=".RaceFragment">
 
     <TextView
         android:id="@+id/nomeGara"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="28dp"
         android:fontFamily="@font/formula1_bold"
         android:text="@string/emilian_ngrand_prix"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -48,21 +49,21 @@
         android:id="@+id/leftLine2"
         android:layout_width="1dp"
         android:layout_height="75dp"
-        android:layout_marginTop="215dp"
+        android:layout_marginTop="28dp"
         android:src="@drawable/white_line"
         app:layout_constraintEnd_toStartOf="@+id/leftHours"
         app:layout_constraintStart_toEndOf="@+id/leftMins"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/rightLine" />
 
     <ImageView
         android:id="@+id/leftLine3"
         android:layout_width="1dp"
         android:layout_height="75dp"
-        android:layout_marginTop="215dp"
+        android:layout_marginTop="28dp"
         android:src="@drawable/white_line"
         app:layout_constraintEnd_toStartOf="@+id/leftDays"
         app:layout_constraintStart_toEndOf="@+id/leftHours"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/rightLine" />
 
     <ImageView
         android:id="@+id/rightLine"
@@ -106,7 +107,7 @@
         android:id="@+id/leftMins"
         android:layout_width="59dp"
         android:layout_height="39dp"
-        android:layout_marginTop="220dp"
+        android:layout_marginTop="33dp"
         android:layout_marginEnd="16dp"
         android:fontFamily="@font/formula1_bold"
         android:text="13"
@@ -114,7 +115,7 @@
         android:textColor="@color/white"
         android:textSize="30sp"
         app:layout_constraintEnd_toStartOf="@+id/leftHours"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/rightLine" />
 
     <TextView
         android:id="@+id/leftHours"
@@ -171,51 +172,97 @@
         app:layout_constraintTop_toTopOf="@+id/textView7" />
 
     <ImageView
-        android:id="@+id/imageView6"
+        android:id="@+id/liveChatCard"
         android:layout_width="180dp"
         android:layout_height="60dp"
-        android:layout_marginEnd="17dp"
         android:src="@drawable/calendar_shape"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
+        app:layout_constraintBottom_toBottomOf="@+id/infoCircuitoCard"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView7"
+        app:layout_constraintStart_toEndOf="@+id/infoCircuitoCard"
+        app:layout_constraintTop_toTopOf="@+id/infoCircuitoCard"
         app:layout_constraintVertical_bias="0.0" />
 
-    <TextView
-        android:id="@+id/circuito2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:fontFamily="@font/formula1_bold"
-        android:text="CIRCUITO"
-        android:textColor="@color/black"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
-        app:layout_constraintEnd_toEndOf="@+id/imageView7"
-        app:layout_constraintStart_toStartOf="@+id/imageView7" />
-
-    <TextView
-        android:id="@+id/info2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:fontFamily="@font/formula1_regular"
-        android:text="INFO"
-        android:textColor="@color/black"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="@+id/imageView7"
-        app:layout_constraintStart_toStartOf="@+id/imageView7"
-        app:layout_constraintTop_toTopOf="@+id/imageView7" />
-
     <ImageView
-        android:id="@+id/imageView7"
+        android:id="@+id/infoCircuitoCard"
         android:layout_width="180dp"
         android:layout_height="60dp"
-        android:layout_marginStart="17dp"
-        android:layout_marginBottom="360dp"
+        android:layout_marginTop="26dp"
         android:src="@drawable/calendar_shape"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toStartOf="@+id/liveChatCard"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+
+    <ImageView
+        android:id="@+id/raceCard"
+        android:layout_width="377dp"
+        android:layout_height="105dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="19dp"
+        android:src="@drawable/calendar_shape"
+        app:layout_constraintBottom_toTopOf="@+id/qualiCard"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/liveChatCard" />
+
+    <ImageView
+        android:id="@+id/qualiCard"
+        android:layout_width="377dp"
+        android:layout_height="105dp"
+        android:layout_marginTop="221dp"
+        android:src="@drawable/calendar_shape"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+
+    <TextView
+        android:id="@+id/quali"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="28dp"
+        android:fontFamily="@font/formula1_bold"
+        android:text="QUALIFYING"
+        android:textColor="@color/black"
+        android:textSize="30sp"
+        app:layout_constraintStart_toStartOf="@+id/qualiCard"
+        app:layout_constraintTop_toTopOf="@+id/qualiCard" />
+
+    <TextView
+        android:id="@+id/orarioQuali"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginBottom="12dp"
+        android:fontFamily="@font/formula1_regular"
+        android:text="16:00 - 17:00"
+        android:textColor="@color/black"
+        android:textSize="17sp"
+        app:layout_constraintBottom_toBottomOf="@+id/qualiCard"
+        app:layout_constraintStart_toStartOf="@+id/raceCard" />
+
+    <ImageView
+        android:id="@+id/qualiBlackLine2"
+        android:layout_width="250dp"
+        android:layout_height="1dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginBottom="36dp"
+        android:src="@drawable/black_line"
+        app:layout_constraintBottom_toBottomOf="@+id/qualiCard"
+        app:layout_constraintStart_toStartOf="@+id/qualiCard" />
+
+    <TextView
+        android:id="@+id/qualiDay"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="12dp"
+        android:fontFamily="@font/formula1_bold"
+        android:text="20 MAY"
+        android:textColor="#FF0000"
+        android:textSize="15sp"
+        app:layout_constraintStart_toStartOf="@+id/raceCard"
+        app:layout_constraintTop_toTopOf="@+id/qualiCard" />
 
     <TextView
         android:id="@+id/info3"
@@ -226,9 +273,9 @@
         android:text="APRI"
         android:textColor="@color/black"
         android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="@+id/imageView6"
-        app:layout_constraintStart_toStartOf="@+id/imageView6"
-        app:layout_constraintTop_toTopOf="@+id/imageView6" />
+        app:layout_constraintEnd_toEndOf="@+id/liveChatCard"
+        app:layout_constraintStart_toStartOf="@+id/liveChatCard"
+        app:layout_constraintTop_toTopOf="@+id/liveChatCard" />
 
     <TextView
         android:id="@+id/info"
@@ -239,9 +286,9 @@
         android:text="INFO"
         android:textColor="@color/black"
         android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="@+id/imageView7"
-        app:layout_constraintStart_toStartOf="@+id/imageView7"
-        app:layout_constraintTop_toTopOf="@+id/imageView7" />
+        app:layout_constraintEnd_toEndOf="@+id/infoCircuitoCard"
+        app:layout_constraintStart_toStartOf="@+id/infoCircuitoCard"
+        app:layout_constraintTop_toTopOf="@+id/infoCircuitoCard" />
 
     <TextView
         android:id="@+id/circuito"
@@ -252,9 +299,9 @@
         android:text="CIRCUITO"
         android:textColor="@color/black"
         android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
-        app:layout_constraintEnd_toEndOf="@+id/imageView7"
-        app:layout_constraintStart_toStartOf="@+id/imageView7" />
+        app:layout_constraintBottom_toBottomOf="@+id/infoCircuitoCard"
+        app:layout_constraintEnd_toEndOf="@+id/infoCircuitoCard"
+        app:layout_constraintStart_toStartOf="@+id/infoCircuitoCard" />
 
     <TextView
         android:id="@+id/circuito3"
@@ -265,8 +312,84 @@
         android:text="LIVECHAT"
         android:textColor="@color/black"
         android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
-        app:layout_constraintEnd_toEndOf="@+id/imageView6"
-        app:layout_constraintStart_toStartOf="@+id/imageView6" />
+        app:layout_constraintBottom_toBottomOf="@+id/liveChatCard"
+        app:layout_constraintEnd_toEndOf="@+id/liveChatCard"
+        app:layout_constraintStart_toStartOf="@+id/liveChatCard" />
+
+    <TextView
+        android:id="@+id/raceDay"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="12dp"
+        android:fontFamily="@font/formula1_bold"
+        android:text="21 MAY"
+        android:textColor="#FF0000"
+        android:textSize="15sp"
+        app:layout_constraintStart_toStartOf="@+id/raceCard"
+        app:layout_constraintTop_toTopOf="@+id/raceCard" />
+
+    <TextView
+        android:id="@+id/orarioGara"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginBottom="12dp"
+        android:fontFamily="@font/formula1_regular"
+        android:text="15:00"
+        android:textColor="@color/black"
+        android:textSize="17sp"
+        app:layout_constraintBottom_toBottomOf="@+id/raceCard"
+        app:layout_constraintStart_toStartOf="@+id/raceCard" />
+
+    <TextView
+        android:id="@+id/race"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="28dp"
+        android:fontFamily="@font/formula1_bold"
+        android:text="RACE"
+        android:textColor="@color/black"
+        android:textSize="30sp"
+        app:layout_constraintStart_toStartOf="@+id/raceCard"
+        app:layout_constraintTop_toTopOf="@+id/raceCard" />
+
+    <ImageView
+        android:id="@+id/qualiBlackLine"
+        android:layout_width="200dp"
+        android:layout_height="1dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginBottom="36dp"
+        android:src="@drawable/black_line"
+        app:layout_constraintBottom_toBottomOf="@+id/raceCard"
+        app:layout_constraintStart_toStartOf="@+id/raceCard" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="-39dp" />
+
+    <ImageView
+        android:id="@+id/imageView6"
+        android:layout_width="106dp"
+        android:layout_height="94dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="4dp"
+        app:layout_constraintEnd_toEndOf="@+id/qualiCard"
+        app:layout_constraintTop_toTopOf="@+id/qualiCard"
+        app:srcCompat="@drawable/img" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="150dp"
+        android:layout_height="97dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="4dp"
+        app:layout_constraintEnd_toEndOf="@+id/raceCard"
+        app:layout_constraintTop_toTopOf="@+id/raceCard"
+        app:srcCompat="@drawable/img_1" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
