--- a/app/src/main/res/layout/drivers_standings_recycler_view.xml
+++ b/app/src/main/res/layout/drivers_standings_recycler_view.xml
@@ -70,7 +70,7 @@
         android:elevation="10dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/verstappen" />
+        app:srcCompat="@drawable/max_verstappen" />
 
     <TextView
         android:id="@+id/textView4"
@@ -118,9 +118,22 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
         android:fontFamily="@font/formula1italic"
-        android:text="RedBull Racing Team"
+        android:text="RedBull"
         android:textColor="#000000"
-        android:textSize="10sp"
+        android:textSize="14sp"
         app:layout_constraintStart_toEndOf="@+id/textView2"
         app:layout_constraintTop_toBottomOf="@+id/DriverSurname" />
+
+    <TextView
+        android:id="@+id/DriverID"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="188dp"
+        android:text="pippo"
+        android:textColor="#00FF236E"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.643" />
 </androidx.constraintlayout.widget.ConstraintLayout>
