--- a/app/src/main/res/layout/fragment_driver_profile.xml
+++ b/app/src/main/res/layout/fragment_driver_profile.xml
@@ -125,7 +125,7 @@
             android:layout_height="136dp"
             android:layout_marginTop="17dp"
             android:elevation="10dp"
-            android:src="@drawable/verstappen"
+            android:src="@drawable/max_verstappen"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.118"
             app:layout_constraintStart_toStartOf="parent"
