--- a/app/src/main/res/drawable/calendar_flag_shape.xml
+++ b/app/src/main/res/drawable/calendar_flag_shape.xml
@@ -1,7 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/white" />
-    <corners android:topLeftRadius="50dp"
-        android:topRightRadius="20dp"
-        android:bottomRightRadius="20dp"/> <!-- Imposta il valore del raggio per gli angoli arrotondati -->
-</shape>
+<!-- res/drawable/custom_shape_with_background.xml -->
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- Questo è l'elemento per l'immagine di sfondo -->
+    <item>
+        <shape>
+            <corners android:radius="16dp"/>
+        </shape>
+    </item>
+
+    <item
+        android:id="@+id/flagGara1"
+        android:drawable="@color/white"/>
+    <!-- Aggiungi qui ulteriori elementi per il tuo shape drawable, ad esempio un bordo o una forma -->
+</layer-list>
