--- a/app/src/main/res/navigation/formula_navigation_graph.xml
+++ b/app/src/main/res/navigation/formula_navigation_graph.xml
@@ -105,6 +105,10 @@
             app:argType="string"
             android:defaultValue="noFirstDate" />
         <argument
+            android:name="qualiHour"
+            app:argType="string"
+            android:defaultValue="noFirstDate" />
+        <argument
             android:name="raceHour"
             app:argType="string"
             android:defaultValue="noFirstDate" />
