--- a/app/src/main/res/layout/header_driver_standings.xml
+++ b/app/src/main/res/layout/header_driver_standings.xml
@@ -5,11 +5,10 @@
     android:id="@+id/DriverStandingsYear"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp"
     android:layout_marginStart="10dp"
     android:layout_marginTop="5dp"
     android:layout_marginEnd="10dp"
-    android:layout_marginBottom="8dp"
+    android:layout_marginBottom="10dp"
     android:background="@drawable/driver_profile_background"
     android:elevation="20dp">
 
@@ -33,11 +32,11 @@
         android:id="@+id/DriverStandingsYearSpinner"
         android:layout_width="109dp"
         android:layout_height="50dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:elevation="20dp"
         android:spinnerMode="dialog"
         android:textAlignment="center"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
