--- a/app/src/main/res/layout/fragment_circuit_info.xml
+++ b/app/src/main/res/layout/fragment_circuit_info.xml
@@ -16,10 +16,10 @@
         android:text="Lap record:"
         android:textColor="@color/white"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/n_laps2" />
+        app:layout_constraintTop_toBottomOf="@+id/raceDistance" />
 
     <TextView
-        android:id="@+id/n_laps4"
+        android:id="@+id/lapRecord"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -32,7 +32,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView24" />
 
     <TextView
-        android:id="@+id/n_laps5"
+        android:id="@+id/lapRecord2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="156dp"
@@ -57,7 +57,7 @@
         app:layout_constraintTop_toBottomOf="@+id/n_laps" />
 
     <TextView
-        android:id="@+id/n_laps3"
+        android:id="@+id/firstGP"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -79,10 +79,10 @@
         android:text="Race distance"
         android:textColor="@color/white"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/n_laps3" />
+        app:layout_constraintTop_toBottomOf="@+id/firstGP" />
 
     <TextView
-        android:id="@+id/n_laps2"
+        android:id="@+id/raceDistance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
