--- a/app/src/main/res/layout/header_race_recycler_view.xml
+++ b/app/src/main/res/layout/header_race_recycler_view.xml
@@ -38,6 +38,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:id="@+id/prossimoEvento"
         app:layout_constraintTop_toBottomOf="@+id/imageView10">
 
         <ImageView
